set(CMAKE_AUTOMOC ON)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC -O2 -g -Wall -pthread -fstack-protector-all -Wstack-protector -Woverloaded-virtual -Wextra -Wshadow -Wsuggest-attribute=noreturn")
find_library( NAMES libmpdclient)
find_path(LIBMPDCLIENT_INCLUDE_DIR connection.h PATH_SUFFIXES mpd)
find_library(LIBMPDCLIENT_LIBRARY NAMES mpdclient)
include_directories(${QtIncDirs} ${CMAKE_CURRENT_BINARY_DIR} ${LIBMPDCLIENT_INCLUDE_DIR})
add_library(QtMpdClient qmpdclient.cpp qmpdmonitor.cpp qmpdsong.cpp qmpdstatus.cpp qmpdentity.cpp qmpddirectory.cpp qmpdplaylist.cpp) 
target_link_libraries(QtMpdClient ${LIBMPDCLIENT_LIBRARY} ${QtLibs})
